[metadata]
name = ansible-bender
url = https://github.com/ansible-community/ansible-bender
description = A tool which builds container images using Ansible playbooks
long_description = file: README.md
long_description_content_type = text/markdown
author = Tomas Tomecek
author_email = tomas@tomecek.net
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
keywords =
    ansible
    containers
    linux
    buildah


[options]
python_requires = >=3.6
packages = find:
include_package_data = True

install_requires =
    PyYAML
    tabulate
    jsonschema
    importlib_metadata; python_version < '3.8'

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
testing =
    pytest
    flexmock
    pytest-cov

[options.entry_points]
console_scripts =
    ansible-bender = ansible_bender.cli:main
